web/styles/portico/portico_signin.css
/* ... */
.split-view {
    .org-header {
        text-align: left;

        .info-box {
            display: inline-block;
            position: relative;
            margin: 20px 0 0 20px;
            width: calc(100% - 125px);

            /* full width minus the avatar + padding + borders */
            text-align: left;
        }
    }

    .left-side {
        width: 500px;
        border-right: 1px solid hsl(0deg 0% 93%);
        position: relative;
        left: -1px;

        .description {
            text-align: left;
            font-weight: normal;

            margin-top: 20px;
            margin-right: 10px;
        }

        + .right-side {
            border-left: 1px solid hsl(0deg 0% 93%);
            /* this is to make sure the borders of the left and right side overlap
               each other. */
            padding-left: 15px;
            margin-left: -5px;
        }
    }

    .right-side .form-inline {
        width: 328px;
    }
}

.split-view .right-side,
.split-view .left-side {
    display: inline-block;
    vertical-align: top;
}

.split-view .org-header .avatar,
.register-page-container .org-header .avatar {
    display: inline-block;
    vertical-align: top;

    width: 100px;
    height: 100px;
}

.info-box {
    .organization-name,
    .organization-path {
        max-width: 100%;
        overflow: hidden;
        white-space: nowrap;
        text-overflow: ellipsis;
    }

    .organization-name {
        font-size: 1.5em;
        font-weight: 300;
        line-height: 1.2;
    }

    .organization-path {
        font-weight: 400;
        color: hsl(0deg 0% 47%);
        margin-top: 5px;
    }
}

.confirm-email-change-page .white-box {
    max-width: 500px;
    word-break: break-word;
}

.anonymous_access_form {
    & button {
        /* Avoid excessive space at top of login form */
        margin-top: 0;
    }
}

button.login-social-button {
    width: 328px;
    height: auto;
    /* Using 44px gives us more space between text and icon so that they don't overlap. */
    /* Tested in Russian language which has the maximum text. */
    padding-left: 44px;
    line-height: 1;

    background-size: auto 60%;
    background-repeat: no-repeat;
    background-position: 13px 50%;
    background-color: hsl(0deg 0% 100%);
    box-shadow:
        0 1px 3px hsl(0deg 0% 0% / 30%),
        0 0 5px hsl(0deg 0% 0% / 10%);
    margin-left: 0;
    margin-top: 0;

    color: hsl(0deg 0% 34%);

    &:hover {
        background-color: hsl(0deg 0% 98%);
        box-shadow: 1px 2px 5px hsl(0deg 0% 0% / 20%);
    }

    &:active {
        background-color: hsl(0deg 0% 93%);
        box-shadow: 0 1px 1px hsl(0deg 0% 0% / 30%);
    }
}

button#login_auth_button_gitlab,
button#register_auth_button_gitlab {
    /* GitLab icon size looks a bit inconsistent with others. This fixes it. */
    background-size: auto 90%;
    background-position-x: 3px;
}

.login-page-container .right-side .actions,
.back-to-login-wrapper {
    margin: 20px 0 0;
    text-align: left;
}

.register-page-container .register-form-login-redirect {
    margin-top: 10px;
    float: right;
    font-size: 17px;
    font-weight: normal;

    .register-link {
        font-size: 17px;
        margin-left: 5px;
    }
}

.back-to-login-wrapper .back-to-login {
    display: flex;
    gap: 5px;
    align-items: center;

    i {
        position: relative;
        top: -1px;
        font-size: 0.8em;
    }
}

.split-view .actions a,
.back-to-login {
    color: hsl(164deg 100% 23%);
    text-decoration: none;
    font-weight: 600;
    font-size: 0.8em;
    line-height: 1.5;
    vertical-align: top;

    transition: color 0.2s ease;

    &:hover {
        text-decoration: none;
        color: hsl(156deg 62% 61%);
    }
}
/* ... */

