onboarding: Fix formatting of registration page buttons.
This ensures that in the registration page the text does not overlap icons in any language.

Fixes #20563.

--- a/web/styles/portico/portico_signin.css
+++ b/web/styles/portico/portico_signin.css
@@ -843,9 +843,8 @@ html {
 button.login-social-button {
     width: 328px;
     height: auto;
-    /* Using 44px gives us more space between text and icon so that they don't overlap. */
-    /* Tested in Russian language which has the maximum text. */
-    padding-left: 44px;
+    /* Using 16% gives us space between text and icon so that they don't overlap. */
+    padding-left: 16%;
     line-height: 1;
 
     background-size: auto 60%;
